# SR2_Flat-Shading

./: CMakeLists.txt  README.md  color.h  fragment.h  framebuffer.h  main.cpp  shaders.h  vertex.h
